FSxN-MSFC-Deployment.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: This template creates Amazon FSx for NetApp ONTAP file system into private subnets in separate Availability Zones inside a VPC 
#**WARNING** This template creates Amazon resources. You will be billed for the AWS resources used if you create a stack from this template.

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Network configuration
        Parameters:
          - Subnet1ID
          - Subnet2ID
          - VPCID
      - Label:
          default: Configurations for FSx ONTAP File System
        Parameters:
          - BackupRetention
          - DailyBackupTime
          - FileSystemName
          - StorageCapacity
          - ThroughputCapacity
          - FSxAllowedCIDR
          - WeeklyMaintenanceTime
          - FsxAdminPassword
          - FSxEncryptionKey
          - WeeklyMaintenanceTime
      - Label:
          default: Storage Virtual Machine configurations
        Parameters:
          - SVM name
          - RootVolumeSecurityStyle
          - SvmAdminPassword
      - Label:
          default: AWS Managed Microsoft AD settings for Amazon FSx
        Parameters:
          - ActiveDirectoryId  
      - Label:
          default: Self-managed Active Directory settings for Amazon FSx
        Parameters:
          - DNSIP1
          - DNSIP2
          - DomainDNSName
          - FSxUserSecretsArn
      - Label:
          default: Default Volume configuration
        Parameters:
          - Volumename1
          - Junctionpath1
          - Volumesize1
          - Volumename2
          - Junctionpath2
          - Volumesize2
          
    ParameterLabels:
      VPCID:
        default: VPC ID
      Subnet1ID:
        default: Private Subent 1 ID
      Subnet2ID:
        default: Private Subent 2 ID
      FSxONTAPRouteTable:
        default: Route Table for FSxONTAP
      BackupRetention:
        default: Automated backup retention
      DailyBackupTime:
        default: Daily backup start time  
      FileSystemName:
        default: Name of your File System
      FSxEncryptionKey:
        default: Type of AWS KMS key used by FSx  
      StorageCapacity:
        default: Storage size
      ThroughputCapacity:
        default: Throughput capacity of Amazon FSx file system
      FSxAllowedCIDR:
        default: CIDR range allowed to connect to Amazon FSx file system
      WeeklyMaintenanceTime:
        default: Weekly Maintenance Time
      FsxAdminPassword: 
        default: Admin password for managing FSx file system
      RootVolumeSecurityStyle: 
        default: The security style of the root volume of the SVM
      SvmAdminPassword:
        default: Password for managing SVM in your FSxONTAP File System
      ActiveDirectoryId:
        default: AWS Managed Microsoft AD ID  
      DNSIP1:
        default: IP address of DNS server
      DNSIP2:
        default: IP address of DNS server
      DomainDNSName:
        default: FQDN of your self-managed directory
      FSxUserSecretsArn:
        default: AWS Secrets Manager secret ARN or name 
      Volumename1:
        default: VolumeName disk 1
      Junctionpath1:
        default: Junction path disk 2
      Volumesize1:
        default: Disk 1 Volume size in MB
      Volumename2:
        default: VolumeName disk 2
      Junctionpath2:
        default: Junction path disk 2
      Volumesize2:
        default: Disk 2 volume size in MB

Parameters: 
  FileSystemName:
    Description: Specify a name for your file system to make it easier to find and manage.
    Type: String
  VPCID:
    Description: Choose the VPC to which you want to deploy the FSxONTAP cluster
    Type: AWS::EC2::VPC::Id
  Subnet1ID: 
    Description: Choose the first Subnet where FSxONTAP file system's network interface will be created
    Type: AWS::EC2::Subnet::Id
  Subnet2ID: 
    Description: Choose the standby Subnet where FSxONTAP file system's network interface will be created
    Type: AWS::EC2::Subnet::Id
  BackupRetention:
    Description: Specify the number of days to retain automatic backups. 
      Setting this value to 0 disables the creation of automatic backups. The maximum retention period 
      for backups is 35 days. 
    Default: 7
    Type: Number
  DailyBackupTime:
    Description: Specify the preferred time to take daily automatic backups, formatted HH:MM in the UTC time zone. 
    Default: '01:00'
    Type: String  
  FSxONTAPRouteTable:
    Description: Choose your preferred route table for FSxONTAP file system
    Type: String
  StorageCapacity:
    Default: 1024
    Description: Specify the storage capacity of the file system being created, in gibibytes. Minimum 1024 GiB; Maximum 192 TiB.
    Type: Number
  FSxAllowedCIDR:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Description: Specify the CIDR block that is allowed access to FSx for Windows File Server.
    Type: String
  ThroughputCapacity:
    Description: Sets the throughput capacity for the file system that you're creating. Valid values are 128, 512, 1024, and 2048 MBps.
    ConstraintDescription: Valid values are 128, 512, 1024, and 2048 MBps.
    AllowedValues: [128, 512, 1024, 2048]
    Type: Number
  WeeklyMaintenanceTime:
     Description: Specify the preferred start time to perform weekly maintenance, formatted d:HH:MM in the UTC time zone
     Default: '7:01:00'
     Type: String
  FsxAdminPassword:
     NoEcho: true
     Description: Password for this file system's ?fsxadmin? user, which you can use to access the ONTAP CLI or REST API.
     Type: String
     MinLength: 5
     MaxLength: 40
  RootVolumeSecurityStyle: 
     Description: The security style of the root volume of the SVM. Specify one of the following values, UNIX, NTFS or MIXED.
     Type: String
     Default: UNIX
     AllowedValues: ["UNIX", "NTFS", "MIXED"]
  SvmAdminPassword:
     NoEcho: true
     Description: The password to use when managing the SVM using the NetApp ONTAP CLI or REST API. If you do not specify a password, you can still use the file system's fsxadmin user to manage the SVM.
     Type: String
     MinLength: 5
     MaxLength: 40
     AllowedPattern: ^[a-zA-Z0-9]*$
  FSxEncryptionKey:
    AllowedValues:
      - 'Default'
      - 'GenerateKey'
      - 'UseKey'
    Description: Use the default AWS Key Management Service (AWS KMS) key for Amazon FSx, choose GenerateKey to create a key, 
      or choose UseKey to use an existing key for encryption at rest on the Amazon FSx for Windows file system. 
    Default: 'Default'
    Type: String   
  ActiveDirectoryId:
    Description: Enter the ID of the AWS Managed Microsoft AD. If you are using self-managed Active Directory, leave this blank.
    Default: '' 
    Type: String   
  DNSIP1:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$
    Description: Specify the first DNS IP address needed for the self-managed Active Directory scenario (e.g., 10.0.0.1). If using AWS Managed Microsoft AD, leave this blank.
    Default: '10.9.10.39' 
    Type: String
  DNSIP2:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$
    Description: Specify the second DNS IP address needed for the self-managed Active Directory scenario (e.g., 10.0.0.1). If using AWS Managed Microsoft AD, leave this blank.
    Default: '10.21.2.27' 
    Type: String
  DomainDNSName:
    AllowedPattern: '[a-zA-Z0-9\-]+\..+'
    Description: Specify the fully qualified domain name (FQDN) of your self-managed directory. Domain name must not be in the 
      Single Label Domain (SLD) format. This is required if you are using self-managed Active Directory. If using AWS Managed Microsoft AD, leave this blank.
    Type: String 
    Default: abc.xyz.com
  FileSystemAdminGroup:
    Description: Specify the domain group to which you want to delegate authority to 
      perform administrative actions on your file system. If you don?t specify this group, Amazon FSx delegates 
      this authority to the Domain Admins group in your AD domain by default.
    Default: '' 
    Type: String
  OrgUnitDN:
    Description: Specify the organizational unit (OU) distinguished name (DN) in your domain in which you want your file system to be joined (e.g., 'OU=FileSystems,DC=corp,DC=example,DC=com').
    Default: ''
    Type: String  
  FSxUserSecretsArn:
    Description: Specify the Amazon Resource Name (ARN) or secret name of the secret in AWS Secrets Manager for Amazon FSx to join your AD domain.
    Default: ''
    Type: String
  Volumename1:
    Description: Specify volume name
    Type: String
    Default: vol1
  Junctionpath1:
    Description: Specify dir path
    Type: String
    Default: /vol1
  Volumesize1:
    Description: size of the disk in MB
    Type: String
    Default: 210000
  Volumename2:
    Description: Specify volume name
    Type: String
    Default: vol2
  Junctionpath2:
    Description: Specify dir path
    Type: String
    Default: /vol2
  Volumesize2:
    Description: size of the disk in MB
    Type: String
    Default: 310000
# Condition when using AWS Managed AD or Self Managed AD    
Conditions:
  UseAWSDirectoryService: !Not
    - !Equals
      - ''
      - !Ref 'ActiveDirectoryId'
  HasGroup: !Not
    - !Equals
      - ''
      - !Ref 'FileSystemAdminGroup'
  HasOU: !Not
    - !Equals
      - ''
      - !Ref 'OrgUnitDN'
  HasKey: !Equals
      - 'UseKey'
      - !Ref 'FSxEncryptionKey'
  CreateKey: !Equals
      - 'GenerateKey'
      - !Ref 'FSxEncryptionKey'
  UseNonDefault: !Not
    - !Equals
      - 'Default'
      - !Ref 'FSxEncryptionKey'    

Resources:
  FSxONTAPSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPCID
      GroupDescription: Security Group for FSx for Windows File Storage Access
      SecurityGroupIngress:
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: tcp
          FromPort: 111
          ToPort: 111
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: tcp
          FromPort: 135
          ToPort: 135
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: tcp
          FromPort: 139
          ToPort: 139
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: tcp
          FromPort: 161
          ToPort: 161
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: tcp
          FromPort: 162
          ToPort: 162
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: tcp
          FromPort: 445
          ToPort: 445
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: tcp
          FromPort: 635
          ToPort: 635
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: tcp
          FromPort: 749
          ToPort: 749
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: tcp
          FromPort: 2049
          ToPort: 2049
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: udp
          FromPort: 3260
          ToPort: 3260
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: tcp
          FromPort: 4045
          ToPort: 4045
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: tcp
          FromPort: 4046
          ToPort: 4046
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: tcp
          FromPort: 11104
          ToPort: 11104
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: tcp
          FromPort: 11105
          ToPort: 11105
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: udp
          FromPort: 111
          ToPort: 111
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: udp
          FromPort: 135
          ToPort: 135
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: udp
          FromPort: 137
          ToPort: 137
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: udp
          FromPort: 139
          ToPort: 139
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: udp
          FromPort: 161
          ToPort: 161
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: udp
          FromPort: 162
          ToPort: 162
          CidrIp: !Ref FSxAllowedCIDR
          Description: "Used for SMB"
        - IpProtocol: udp
          FromPort: 635
          ToPort: 635
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: udp
          FromPort: 2049
          ToPort: 2049
          CidrIp: !Ref FSxAllowedCIDR
          Description: "Used for SMB"
        - IpProtocol: udp
          FromPort: 4045
          ToPort: 4045
          CidrIp: !Ref FSxAllowedCIDR
        - IpProtocol: udp
          FromPort: 4046
          ToPort: 4046
          CidrIp: !Ref FSxAllowedCIDR
          Description: "Used for SMB"
        - IpProtocol: udp
          FromPort: 4049
          ToPort: 4049
          CidrIp: !Ref FSxAllowedCIDR
          Description: "Used for SMB"
  FSxONTAP:
    Type: AWS::FSx::FileSystem
    Properties:
      FileSystemType: ONTAP
      StorageCapacity: !Ref StorageCapacity
      StorageType: SSD
      SecurityGroupIds: 
        - !GetAtt FSxONTAPSecurityGroup.GroupId
      SubnetIds:
        - !Ref Subnet1ID
        - !Ref Subnet2ID
      OntapConfiguration:
        AutomaticBackupRetentionDays: 7
        DailyAutomaticBackupStartTime: "01:00"
        DeploymentType: MULTI_AZ_1
        DiskIopsConfiguration:
          Mode: AUTOMATIC
        PreferredSubnetId: !Ref Subnet1ID
        RouteTableIds:
          - !Ref FSxONTAPRouteTable
        ThroughputCapacity: !Ref ThroughputCapacity
        WeeklyMaintenanceStartTime: !Ref WeeklyMaintenanceTime
        FsxAdminPassword: !Ref FsxAdminPassword
# WindowsConfiguration has IF function, applies the condition : AWS Managed AD or Self Managed AD        
      WindowsConfiguration: !If
        - UseAWSDirectoryService
        - ActiveDirectoryId: !Ref 'ActiveDirectoryId'
          WeeklyMaintenanceStartTime: !Ref 'WeeklyMaintenanceTime'
          DailyAutomaticBackupStartTime: !Ref 'DailyBackupTime'
          AutomaticBackupRetentionDays: !Ref 'BackupRetention'
          DeploymentType: MULTI_AZ_1
          PreferredSubnetId: !Ref 'Subnet1ID'
          ThroughputCapacity: !Ref 'ThroughputCapacity'
        - WeeklyMaintenanceStartTime: !Ref 'WeeklyMaintenanceTime'
          DailyAutomaticBackupStartTime: !Ref 'DailyBackupTime'
          AutomaticBackupRetentionDays: !Ref 'BackupRetention'
          DeploymentType: MULTI_AZ_1
          PreferredSubnetId: !Ref 'Subnet1ID'
          ThroughputCapacity: !Ref 'ThroughputCapacity'
          SelfManagedActiveDirectoryConfiguration:
            DnsIps: 
              - !Ref DNSIP1
              - !Ref DNSIP2
            DomainName: !Ref DomainDNSName
            FileSystemAdministratorsGroup: !If
              - HasGroup
              - !Ref 'FileSystemAdminGroup'
              - !Ref 'AWS::NoValue'
            OrganizationalUnitDistinguishedName: !If
              - HasOU
              - !Ref 'OrgUnitDN'
              - !Ref 'AWS::NoValue'
            UserName: !Join
              - ''
              - - '{{resolve:secretsmanager:'
                - !Ref FSxUserSecretsArn
                - ':SecretString:Username}}'
            Password: !Join 
              - ''
              - - '{{resolve:secretsmanager:'
                - !Ref FSxUserSecretsArn
                - ':SecretString:Password}}'    
      Tags:
        - Key: "Name"
          Value: "Prod"
  SVM:        
    Type: AWS::FSx::StorageVirtualMachine
    DependsOn: FSxONTAP
    Properties: 
      FileSystemId: !Ref FSxONTAP
      Name: SVM
      RootVolumeSecurityStyle: !Ref RootVolumeSecurityStyle
      SvmAdminPassword: !Ref SvmAdminPassword
      ActiveDirectoryConfiguration : 
        NetBiosName: "svm"
        SelfManagedActiveDirectoryConfiguration:
          DnsIps: 
            - !Ref DNSIP1
            - !Ref DNSIP2
          DomainName: !Ref DomainDNSName
          Password: !Join
            - ''
            - - '{{resolve:secretsmanager:'
              - !Ref FSxUserSecretsArn
              - ':SecretString:Password}}'
          UserName: !Join
            - ''
            - - '{{resolve:secretsmanager:'
              - !Ref FSxUserSecretsArn
              - ':SecretString:Username}}'
  Volume1:
    Type: AWS::FSx::Volume
    Properties:
      Name: !Ref Volumename1
      OntapConfiguration:
        JunctionPath: !Ref Junctionpath1
        StorageVirtualMachineId: !Ref SVM
        StorageEfficiencyEnabled: true
        SizeInMegabytes: !Ref Volumesize1
      VolumeType: ONTAP

  Volume2:
    Type: AWS::FSx::Volume
    Properties:
      Name: !Ref Volumename2
      OntapConfiguration:
        JunctionPath: !Ref Junctionpath2
        StorageVirtualMachineId: !Ref SVM
        StorageEfficiencyEnabled: true
        SizeInMegabytes: !Ref Volumesize2
      VolumeType: ONTAP      

## Store password in Secrets Manager
  SMFsxAdminPassword:
    Type: AWS::SecretsManager::Secret
    Properties: 
      Description: FsxAdminPassword
      Name: FsxAdminPassword202
      SecretString: !Sub '{"username":"fsxadmin","password":${FsxAdminPassword}}'
      Tags:
        - Key: "Name"
          Value: "Prod_FSxadmin"
  SMSVMAdminPassword:
    Type: AWS::SecretsManager::Secret
    Properties: 
      Description: SVMAdminPassword
      Name: SVMAdminPassword202
      SecretString: !Sub '{"username":"vsadmin","password": ${SvmAdminPassword}}'
      Tags:
        - Key: "Name"
          Value: "Prod_SVMuser"
  # Create IAM Role and Policy to be able to retrieve Secrets Manager
  SecretsManagerIAMPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      ManagedPolicyName: 'TridentIAMPolicy'
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Action:
              - 'secretsmanager:GetSecretValue'
              - 'secretsmanager:DescribeSecret'
            Resource:
              - !Ref SMFsxAdminPassword
              - !Ref SMSVMAdminPassword     
Outputs:
  FSxFileSystemID:
    Description: File System ID for FSx for NetAPP ONTAP
    Value: !Ref FSxONTAP
